<?xml version="1.0"?>
<package>
  <name>rosserial_stm32</name>
  <version>0.1.0</version>
  <description>The rosserial_stm32 package</description>

  <maintainer email="standmit@yandex.ru">Andrey Stepanov (aka standmit)</maintainer>

  <author email="yoneken@ieee.org">Kenta Yonekura(a.k.a. yoneken)</author>
  <author email="standmit@yandex.ru">Andrey Stepanov</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_msgs</run_depend>
</package>
